docs/api/qiskit/0.43/qiskit.transpiler.passes.SetIOLatency.md
---
title: SetIOLatency
description: API reference for qiskit.transpiler.passes.SetIOLatency
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.SetIOLatency
---

# SetIOLatency

<span id="qiskit.transpiler.passes.SetIOLatency" />

`SetIOLatency(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/scheduling/scheduling/set_io_latency.py "view source code")

Bases: [`AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

Set IOLatency information to the input circuit.

The `clbit_write_latency` and `conditional_latency` are added to the property set of pass manager. These information can be shared among the passes that perform scheduling on instructions acting on classical registers.

Once these latencies are added to the property set, this information is also copied to the output circuit object as protected attributes, so that it can be utilized outside the transilation, for example, the timeline visualization can use latency to accurately show time occupation by instructions on the classical registers.

Create pass with latency information.

**Parameters**

*   **clbit\_write\_latency** – A control flow constraints. Because standard superconducting quantum processor implement dispersive QND readout, the actual data transfer to the clbit happens after the round-trip stimulus signal is buffered and discriminated into quantum state. The interval `[t0, t0 + clbit_write_latency]` is regarded as idle time for clbits associated with the measure instruction. This defaults to 0 dt which is identical to Qiskit Pulse scheduler.
*   **conditional\_latency** – A control flow constraints. This value represents a latency of reading a classical register for the conditional operation. The gate operation occurs after this latency. This appears as a delay in front of the DAGOpNode of the gate. This defaults to 0 dt.

## Methods

<span id="qiskit-transpiler-passes-setiolatency-name" />

### name

<span id="qiskit.transpiler.passes.SetIOLatency.name" />

`SetIOLatency.name()`

Return the name of the pass.

<span id="qiskit-transpiler-passes-setiolatency-run" />

### run

<span id="qiskit.transpiler.passes.SetIOLatency.run" />

`SetIOLatency.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/scheduling/scheduling/set_io_latency.py "view source code")

Add IO latency information.

**Parameters**

**dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")) – Input DAG circuit.

## Attributes

<span id="qiskit.transpiler.passes.SetIOLatency.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.SetIOLatency.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

